# turing-machine

./: CMakeLists.txt  README.md
src/: main.cpp  turing_machine.cpp  turing_machine.h  user_interface.cpp  user_interface.h
